<resources>
    <string name="app_name">linzon.ru</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="startScreenLoadInformation">Загружаем данные товаров...</string>
    <string name="startScreenRetryLoad">Повторить попытку</string>
    <string name="networkException">Проверьте интернет соединение и повторите попытку позже</string>
    <string name="networkExceptionSmall">Ошибка интернет соединения</string>
    <string name="errorNotValidEmail">Не валидная почта, проверьте данные</string>
    <string name="errorNotFilled">Заполните обязательное поле</string>
    <string name="notificationNewData">Появилось обновление товаров в магазине! Загружаем...</string>

    <string name="drawer_brands">Бренды</string>
    <string name="drawer_filter">Фильтр</string>
    <string name="drawer_popular">Популярные</string>
    <string name="drawer_nav_1">Однодневные линзы</string>
    <string name="drawer_nav_14">Двухнедельные линзы</string>
    <string name="drawer_nav_2">Дышащие линзы</string>
    <string name="drawer_nav_15">Линзы на месяц</string>
    <string name="drawer_nav_7">Цветные линзы</string>
    <string name="drawer_nav_16">Квартальные линзы</string>
    <string name="drawer_nav_3">Традиционные линзы</string>
    <string name="drawer_nav_13">Торические линзы</string>
    <string name="drawer_nav_9">Карнавальные линзы</string>
    <string name="drawer_nav_6">Капли для глаз</string>
    <string name="drawer_nav_10">Растворы для линз</string>
    <string name="drawer_nav_send">Доставка</string>
    <string name="drawer_nav_howtoroad">Как доехать</string>
    <string name="drawer_nav_about">О компании</string>

    <string name="static_price">Цена</string>
    <string name="static_count">Количество</string>
    <string name="static_ordered">Заказано</string>
    <string name="static_vendor">Производитель</string>
    <string name="static_exchange">руб.</string>
    <string name="static_rate">Рейтинг</string>
    <string name="static_total">Итого</string>
    <string name="static_send_title">Отправить заявку</string>
    <string name="static_send_edittext_comment">Ваш комментарий к заказу</string>
    <string name="static_send_button_send">Отправить</string>
    <string name="static_send_button_cancel">Отмена</string>
    <string name="static_order">Заказ №</string>

    <string name="offer_params">Параметры</string>
    <string name="offer_leftPart">Левый</string>
    <string name="offer_rightPart">Правый</string>
    <string name="offer_count">Количество</string>
    <string name="offer_BC">Кривизна (BC)</string>
    <string name="offer_PWR">Диоптрия (PWR)</string>
    <string name="offer_AX">Ось (AX)</string>
    <string name="offer_CYL">Цилиндр (CYL)</string>
    <string name="offer_COLOR">Цвет</string>
    <string name="offer_eye">Глаза</string>
    <string name="buttonAddToBasket">ДОБАВИТЬ В КОРЗИНУ</string>
    <string name="buttonSearch">НАЙТИ</string>
    <string name="buttonBuy">ЗАКАЗАТЬ</string>
    <string name="buttonClear">ОЧИСТИТЬ</string>
    
    <string name="postTitle">Доставка по Москве и Санкт-Петербургу - 150 рублей.</string>
    <string name="postText">Заказы суммарным весом менее 3 кг оплачиваются по стандартному тарифу. Заказы весом более 3 кг оплачиваются из расчета 100 р за каждый кг. Минимальная сумма заказа - 1000 руб. Стоимость самовывоза - от 150 рублей (смотрите таблицу пунктов). Доставка по Москве: В пределах Москвы и ближнего подмосковья ежедневно с 10-00 до 19-00, кроме воскресенья. На следующий день после оформления заказа. Доставка по Санкт-Петербургу: В пределах Санкт-Петербурга ежедневно с 10-00 до 19-00, кроме воскресенья. Доставка в область осуществляется с 10-00 до 18-00 без выбора интервала доставки. Доставка за МКАД и КАД обговаривается отдельно.</string>
    <string name="contactPhoneMoscow">+7[495] 223-35-74</string>
    <string name="contactPhoneSP">+7[812] 748-28-78</string>
    <string name="contactPhoneMoscowText">Ежедневно с 10:00 до 19:00.</string>
    <string name="contactPhoneSPText">Ежедневно с 10:00 до 18:00.</string>

    <string name="toolbarPost">Доставка</string>
    <string name="toolbarContacts">Контакты</string>
    <string name="toolbarUser">Пользователь</string>

    <string name="userName">Имя/Фамилия/Отчество</string>
    <string name="userEmail">Почта</string>
    <string name="userPhone">Телефон</string>
    <string name="userCity">Город</string>
    <string name="userStreet">Улица/Дом</string>
    <string name="userFAQ">Данная информация будет использована для связи оператора с Вами. Перед отправкой заказа необходимо заполнить данные поля.</string>
    <string name="userSaveButton">СОХРАНИТЬ</string>


</resources>
