<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item
        android:id="@+id/action_post"
        android:orderInCategory="200"
        android:title="@string/toolbarPost"
        android:icon="@drawable/ic_local_shipping_white_24dp"
        app:showAsAction="always"/>

    <item
        android:id="@+id/action_contacts"
        android:orderInCategory="200"
        android:title="@string/toolbarContacts"
        android:icon="@drawable/ic_local_phone_white_24dp"
        app:showAsAction="always"/>

    <item
        android:id="@+id/action_user"
        android:orderInCategory="200"
        android:title="@string/toolbarUser"
        android:icon="@drawable/ic_account_circle_white_24dp"
        app:showAsAction="always"/>
</menu>
    <!--app:actionViewClass="android.support.v7.widget.SearchView"-->