<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android" >

    <LinearLayout
        android:id="@+id/userLinearMain"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:padding="8dp"
        android:orientation="vertical"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/userNameInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/userName"
                android:hint="@string/userName"
                android:maxLines="1"
                android:inputType="textVisiblePassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/userPhoneInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/userPhone"
                android:inputType="phone"
                android:maxLength="12"
                android:hint="@string/userPhone"
                android:maxLines="1"
                android:digits="0123456789+"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/userEmailInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/userEmail"
                android:inputType="textVisiblePassword"
                android:hint="@string/userEmail"
                android:maxLines="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/userCityInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/userCity"
                android:hint="@string/userCity"
                android:maxLines="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/userStreetInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/userStreet"
                android:hint="@string/userStreet"
                android:inputType="textVisiblePassword"
                android:maxLines="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"/>
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/userSaveButton"
            style="?attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/blue_button"
            android:foreground="?android:attr/selectableItemBackground"
            android:text="@string/userSaveButton"
            android:textColor="@color/buttonColorText"
            android:layout_marginBottom="16dp"/>

        <TextView
            style="@style/Base.TextAppearance.AppCompat.Body2"
            android:text="@string/userFAQ"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
</ScrollView>