<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:padding="8dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/callMSButton"
            android:background="@drawable/ic_call_black_24dp"
            android:layout_width="36dp"
            android:layout_height="36dp" />

        <TextView
            android:text="@string/contactPhoneMoscow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            style="@style/Base.TextAppearance.AppCompat.Title"
            android:paddingBottom="8dp"/>
    </LinearLayout>

    <TextView
        android:text="@string/contactPhoneMoscowText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        style="@style/Base.TextAppearance.AppCompat.Body2"
        android:paddingBottom="32dp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/callSpButton"
            android:background="@drawable/ic_call_black_24dp"
            android:layout_width="36dp"
            android:layout_height="36dp" />

        <TextView
            android:text="@string/contactPhoneSP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            style="@style/Base.TextAppearance.AppCompat.Title"
            android:paddingBottom="8dp"/>

    </LinearLayout>

    <TextView
        android:text="@string/contactPhoneSPText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        style="@style/Base.TextAppearance.AppCompat.Body2" />
</LinearLayout>