<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp">

    <EditText
        android:id="@+id/sendComment"
        android:gravity="top"
        android:hint="@string/static_send_edittext_comment"
        android:lines="5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2">

        <Button
            android:id="@+id/sendCansel"
            android:text="@string/static_send_button_cancel"
            android:textColor="@android:color/white"
            android:layout_margin="8dp"
            android:background="@drawable/blue_button"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/sendApprove"
            android:text="@string/static_send_button_send"
            android:textColor="@android:color/white"
            android:layout_margin="8dp"
            android:background="@drawable/blue_button"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
    </LinearLayout>
</LinearLayout>